hice todos los adaptadores menos el de cli

--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
 	</modules>
 	<dependencies>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.26</version>
-			<scope>provided</scope>
-		</dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <!-- <optional/> Removed -->
+            <version>1.18.30</version> <!-- Added -->
+        </dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-to-slf4j</artifactId>
