--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: mariadb:latest
     container_name: mariadb-container
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword  # Mantén solo la contraseña de root
+      MYSQL_ROOT_PASSWORD: rootpassword
     ports:
       - "3307:3306"
     volumes:
-      - ./scripts:/docker-entrypoint-initdb.d  # Cargar scripts de inicialización
+      - ./scripts:/docker-entrypoint-initdb.d
     networks:
       - my_network
 
@@ -21,29 +21,22 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./scripts:/docker-entrypoint-initdb.d  # Cargar scripts de inicialización
+      - ./scripts:/docker-entrypoint-initdb.d
     networks:
       - my_network
 
-  #rest-api:
-   # build:
-   #   context: .
-   #   dockerfile: Dockerfile
-   # container_name: rest-api-container
-  #  environment:
-  #    SPRING_DATASOURCE_URL: jdbc:mariadb://mariadb:3306/persona_db  # Cambia a 'persona_db'
-   #   SPRING_DATASOURCE_USERNAME: persona_db  # Cambiado de 'my_user' a 'persona_db'
-    #  SPRING_DATASOURCE_PASSWORD: persona_db  # Cambiado de 'my_password' a 'persona_db'
-     # SPRING_DATA_MONGODB_URI: mongodb://persona_db:persona_db@mongodb:27017/persona_db  # Cambia las credenciales de MongoDB
-  #  ports:
-  #    - "3000:3000"  # Mapea el puerto 3000 de la API al host
-   # depends_on:
-  #    - mariadb
-   #   - mongodb
-   # networks:
-   #   - my_network
+  rest-api:  # Aquí se define el servicio REST
+    container_name: rest-container
+    build:
+      context: .  # Usamos el contexto de la raíz del proyecto
+      dockerfile: Dockerfile  # Asegúrate de que tu Dockerfile esté en la raíz
+    ports:
+      - "3000:3000"  # Mapea el puerto de tu aplicación al puerto 3000
+    networks:
+      - my_network
+    depends_on:
+      - mariadb  # Asegúrate de que MariaDB esté disponible antes de iniciar el REST
 
 networks:
   my_network:
     driver: bridge
-
